Slight modification to prevent hero name and item set overlap

--- a/static/assets/css/dotaleaf.less
+++ b/static/assets/css/dotaleaf.less
@@ -92,19 +92,19 @@ body {
 
 .item_slot {
     .item_info;
-    left: 38%;
+    left: 34%;
     top: 40px;
 }
 
 .item_hero {
     .item_info;
-    left: 52%;
+    left: 48%;
     top: 40px;
 }
 
 .item_set {
     .item_info;
-    left: 66%;
+    left: 68%;
     top: 40px;
 
 }
